--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-	<script src="js/libs/modernizr-2.5.0.min.js"></script>
+	<script src="{{ url_for('static', filename='js/libs/modernizr-2.5.0.min.js') }}"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -87,7 +87,6 @@
 <script>try{Typekit.load();}catch(e){}</script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
 <script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
