--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 			<p>Jérôme Mahuet—<br>
 			hack <em>&</em> design <em>since</em> 1986</p>
 	    </div>
-		<nav role="main-navigation" class="nine columns">
+		<nav role="main-navigation" class="five columns">
 	    	<ul>
 				<li>
 					<a href="http://phollow.fr" title="blog">
