--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,7 +152,8 @@ a:active, a:hover {
 	box-shadow: 0px 1px 3px rgba( 0,0,0,0.4 );
 	border: 1px solid rgba(0, 0, 0, 0.6);
 	margin-top: 7px;
-	margin-right: 1%;
+	margin-right: 3%;
+	float: left;
 }
 
 .me::after {
@@ -296,6 +297,77 @@ section[role="dribbble-wrapper"] a {
 	border: 1px solid rgba(0, 0, 0, 0.6);
 }
 
+ul[role="social-links"] {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	height: 50px;
+}
+
+ul[role="social-links"] li {
+	float: left;
+}
+
+ul[role="social-links"] li a {
+	display: block;
+	width: 48px;
+	height: 48px;
+}
+
+ul[role="social-links"] li a[role="twitter"] {
+	background: url(../images/social/social-twitter-off.png) no-repeat -6px 0;
+}
+
+ul[role="social-links"] li a:hover[role="twitter"] {
+	background: url(../images/social/social-twitter-on.png) no-repeat -6px 2px;
+}
+
+ul[role="social-links"] li a[role="dribbble"] {
+	background: url(../images/social/social-dribbble-off.png) no-repeat;
+	margin-right: 6px;
+}
+
+ul[role="social-links"] li a:hover[role="dribbble"] {
+	background: url(../images/social/social-dribbble-on.png) no-repeat;
+}
+
+ul[role="social-links"] li a[role="facebook"] {
+	background: url(../images/social/social-facebook-off.png) no-repeat;
+	margin-right: 6px;
+}
+
+ul[role="social-links"] li a:hover[role="facebook"] {
+	background: url(../images/social/social-facebook-on.png) no-repeat;
+}
+
+ul[role="social-links"] li a[role="instagram"] {
+	background: url(../images/social/social-instagram-off.png) no-repeat;
+	margin-right: 6px;
+}
+
+ul[role="social-links"] li a:hover[role="instagram"] {
+	background: url(../images/social/social-instagram-on.png) no-repeat 0 2px;
+}
+
+ul[role="social-links"] li a[role="flickr"] {
+	background: url(../images/social/social-flickr-off.png) no-repeat;
+	margin-right: 6px;
+}
+
+ul[role="social-links"] li a:hover[role="flickr"] {
+	background: url(../images/social/social-flickr-on.png) no-repeat 0 2px;
+}
+
+ul[role="social-links"] li a[role="mail"] {
+	background: url(../images/social/social-mail-off.png) no-repeat;
+	margin-right: 6px;
+}
+
+ul[role="social-links"] li a:hover[role="mail"] {
+	background: url(../images/social/social-mail-on.png) no-repeat;
+}
+
+
 footer[role="contentinfo"] {
 	padding: 40px 0 0 0;
 	font-size: 0.875em;
@@ -367,7 +439,7 @@ section[role="logo"] img {
 		}
 		
 		.me {
-			display: none;
+			/*display: none;*/
 		}
 		
 		footer[role="contentinfo"] {
