--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-	<script src="{{ url_for('static', filename='js/libs/modernizr-2.5.0.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/libs/modernizr.min.js') }}"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
