--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Jérôme Mahuet</title>
-	<meta name="description" content="">
+	<meta name="description" content="My name is Jérôme Mahuet, I am a twenty-five year old developer.">
 	<meta name="author" content="Jérôme Mahuet">
 
 	<meta name="viewport" content="width=device-width">
@@ -56,7 +56,7 @@
 		</nav>
 	</header>
 	<section role="main" class="container">
-		<div class="nine columns">
+		<article class="nine columns">
 			<h2 class="first-heading">About me</h2>
 			<img class="me" src="{{ url_for('static', filename='images/meh.png') }}" alt="Jérôme Mahuet">
 			<p>My name is <strong>Jérôme Mahuet</strong>, I am a twenty-five year old developer. </p>
@@ -73,12 +73,16 @@
 			{% endfor %}
 			</ul>
 			{% endif %}
-		</div>
+		</article>
 		<aside class="seven columns">
-			<h5>Colophon</h5>
-			<p>This internet web site was made on a <a href="http://apple.com/">Mac</a>, using <a href="http://www.panic.com/coda/">Coda</a>, <a href="http://www.panic.com/transmit/">Transmit</a>, <a href="http://iconfactory.com/software/xscope">xScope</a> and <a href="http://www.adobe.com/products/photoshop/photoshop/">Photoshop</a>. The site is powered by <a href="http://wordpress.org/">WordPress</a> while the <a href="http://shop.simplebits.com">shop</a> is powered by <a href="http://bigcartel.com">Big Cartel</a>.</p>
-			<p>Webfonts are served up via the wonderful <a href="http://typekit.com/colophons/1MKCHPG">Typekit</a>, and include FF Tisa, Proxima Nova, and Adobe Caslon Pro (for the fancy ampersand).</p>
-			<p>Latest <a href="http://dribbble.com">Dribbble</a> shots are pulled into the footer via <a href="http://www.mediahack.com/apps/half-court-shot">Half Court Shot</a>.</p>
+			<h5>About this website</h5>
+			<p>This site was made on a <a href="http://www.apple.com" title="Apple">Mac</a>, designed in browser and <a href="http://www.adobe.com/fr/products/photoshop.html" title="Photoshop">Photoshop</a> (for the fancy logos).</p>
+			<p>It is powered by <a href="http://python.org/" title="Python">Python</a> and the <a href="http://flask.pocoo.org/" title="Flask">Flask</a> micro-framework. Edited with <a href="http://macromates.com/" title="TextMate">TextMate 2</a>. The source code is hosted on <a href="" title="Github">Github</a>, take a look if you want to.</p>
+			<h5>Hosting</h5>
+			<p>Everything is hosted painlessly on a cloud platform called <a href="http://www.heroku.com/" title="Heroku">Heroku</a> (pronounced her-OH-koo). It’s a fun way of building and deploying web apps.</p>
+			<h5>Fonts</h5>
+			<p>All fonts are served up by the wonderful <a href="http://typekit.com/" title="Typekit">Typekit</a>. Body copy is the awesome <a href="http://www.fontshop.com/fonts/downloads/fontfont/ff_quadraat_web/" title="FF Quadraat Web">FF Quadraat Web</a> by <a href="http://typedia.com/explore/designer/fred-smeijers/" title="Fred Smeijers">Fred Smeijers</a>.</p>
+			
 
 			{% if dribbble_shots %}
 			<h5>Latest Dribbble shots</h5>
