cleaning up+css minified

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,7 @@
 
 	<meta name="viewport" content="width=device-width">
 
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.min.css') }}">
 
 	<script src="{{ url_for('static', filename='js/libs/modernizr.min.js') }}"></script>
 </head>
@@ -101,7 +99,7 @@
 		</article>
 		<aside class="six columns">
 			<h5>About this website</h5>
-			<p>This site was made on a <a href="http://www.apple.com" title="Apple">Mac</a>, designed in browser and <a href="http://www.adobe.com/fr/products/photoshop.html" title="Photoshop">Photoshop</a> (for the fancy logos). Responsive theme by yours truly. Versionned with <a href="http://git-scm.com/" title="Git">Git</a>.<br>It is powered by <a href="http://python.org/" title="Python">Python</a> and the <a href="http://flask.pocoo.org/" title="Flask">Flask</a> micro-framework. Edited with <a href="http://macromates.com/" title="TextMate">TextMate 2</a>. The source code is hosted on <a href="" title="Github">Github</a>, take a look.</p>
+			<p>This site was made on a <a href="http://www.apple.com" title="Apple">Mac</a>, designed in browser and <a href="http://www.adobe.com/products/photoshop.html" title="Photoshop">Photoshop</a> (for the fancy logos). Responsive theme by yours truly. Versionned with <a href="http://git-scm.com/" title="Git">Git</a>.<br>It is powered by <a href="http://python.org/" title="Python">Python</a> and the <a href="http://flask.pocoo.org/" title="Flask">Flask</a> micro-framework. Edited with <a href="http://macromates.com/" title="TextMate">TextMate 2</a>. The source code is hosted on <a href="" title="Github">Github</a>, take a look.</p>
 			<h5>Hosting</h5>
 			<p>Everything is hosted painlessly on a cloud platform called <a href="http://www.heroku.com/" title="Heroku">Heroku</a> (pronounced her-OH-koo). It’s a fun way of building and deploying web apps.</p>
 			<h5>Fonts</h5>
