--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Jérôme Mahuet</title>
-	<meta name="description" content="My name is Jérôme Mahuet, I am a twenty-five year old developer.">
+	<meta name="description" content="My name is Jérôme Mahuet, I am a twenty-five year-old developer.">
 	<meta name="author" content="Jérôme Mahuet">
 
 	<meta name="viewport" content="width=device-width">
@@ -18,7 +18,7 @@
 	<script src="{{ url_for('static', filename='js/libs/modernizr.min.js') }}"></script>
 </head>
 <body>
-<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a newer browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 <div class="container" role="wrapper">
 	<header class="container" role="main-header">
 		<h1 class="two columns">
@@ -57,7 +57,7 @@
 		<article class="ten columns">
 			<h2 class="first-heading">About me</h2>
 			<img class="me" src="{{ url_for('static', filename='images/meh.png') }}" alt="Jérôme Mahuet">
-			<p>My name is <strong>Jérôme Mahuet</strong>, I am a twenty-five year old developer with sharp design sensibilities. I sit on the fence of both worlds. I’m the kind of guy who learns everything by himself, and each project is a way to push further my knowledge. I’m currently living in Limoges, France. When offline I like photography, reading and playing video-games. What a <strong>nerd</strong> indeed.<br>Oh… and I <em>hate</em> when a designer put Lobster everywhere.</p>
+			<p>My name is <strong>Jérôme Mahuet</strong>, I am a twenty-five year-old developer with sharp design sensibilities. I sit on the fence of both worlds. I’m the kind of guy who learns everything by himself, and each project is a way to push further my knowledge. I’m currently living in Limoges, France. When offline I like photography, reading and playing video games. What a <strong>nerd</strong> indeed.<br>Oh… and I <em>hate</em> when a designer put Lobster everywhere.</p>
 
 			<h2>Skills</h2>
 			<p>
@@ -89,7 +89,7 @@
 			
 			{% if entries %}
 			<h2>Latest articles</h2>
-			<p>I also write <em>often</em> about developers topics on my personnal web blog. Actually <em>mostly</em> about developers stuff… There is also some typographical goodness in it. But be warned, this is written in french.</p>
+			<p>I also write <em>often</em> about developer topics on my personal web blog. Actually <em>mostly</em> about developer stuff… There is also some typographical goodness in it. But be warned, this is written in French.</p>
 			<ul role="articles-list">
 			{% for entry in entries %}
 			  <li><a target="_blank" title="{{ entry.title }}" href="{{ entry.feedburner_origlink }}">{{ entry.title }}</a></li>
@@ -99,7 +99,7 @@
 		</article>
 		<aside class="six columns">
 			<h5>About this website</h5>
-			<p>This site was made on a <a href="http://www.apple.com" title="Apple">Mac</a>, designed in browser and <a href="http://www.adobe.com/products/photoshop.html" title="Photoshop">Photoshop</a> (for the fancy logos). Responsive theme by yours truly. Versionned with <a href="http://git-scm.com/" title="Git">Git</a>.<br>It is powered by <a href="http://python.org/" title="Python">Python</a> and the <a href="http://flask.pocoo.org/" title="Flask">Flask</a> micro-framework. Edited with <a href="http://macromates.com/" title="TextMate">TextMate 2</a>. The source code is hosted on <a href="https://github.com/Rydgel/Personal-Website" title="Github">Github</a>, take a look.</p>
+			<p>This site was made on a <a href="http://www.apple.com" title="Apple">Mac</a>, designed in browser and <a href="http://www.adobe.com/products/photoshop.html" title="Photoshop">Photoshop</a> (for the fancy logos). Responsive theme by yours truly. Versioned with <a href="http://git-scm.com/" title="Git">Git</a>.<br>It is powered by <a href="http://python.org/" title="Python">Python</a> and the <a href="http://flask.pocoo.org/" title="Flask">Flask</a> micro-framework. Edited with <a href="http://macromates.com/" title="TextMate">TextMate 2</a>. The source code is hosted on <a href="https://github.com/Rydgel/Personal-Website" title="Github">Github</a>, take a look.</p>
 			<h5>Hosting</h5>
 			<p>Everything is hosted painlessly on a cloud platform called <a href="http://www.heroku.com/" title="Heroku">Heroku</a> (pronounced her-OH-koo). It’s a fun way of building and deploying web apps.</p>
 			<h5>Fonts</h5>
@@ -148,7 +148,7 @@
 	  			<li><a href="http://phollow.fr">Blog</a></li>
 	  			<li>
 					<a href="http://twitter.com/phollow">
-					Follow me {% if nb_followers %}– {{nb_followers|number_format}}{% endif %}
+					Follow me {% if nb_followers %}&mdash; {{nb_followers|number_format}}{% endif %}
 					</a>
 				</li>
 	  		</ul>
