google verification code

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	<title>Jérôme Mahuet</title>
 	<meta name="description" content="My name is Jérôme Mahuet, I am a twenty-five year-old developer.">
 	<meta name="author" content="Jérôme Mahuet">
-
+	<meta name="google-site-verification" content="KPTwyDiLP2gAGP1U-jTyHS0qFUhCmEbPIjmiNlUF-zU">
 	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.min.css') }}">
@@ -28,7 +28,7 @@
 		</h1>
 		<div class="five columns top">
 			<p>Jérôme Mahuet —<br>
-			hack <em>&</em> design <em>since</em> 1986</p>
+			hack <em>&amp;</em> design <em>since</em> 1986</p>
 		</div>
 		<nav role="main-navigation" class="five columns">
 	    	<ul>
@@ -116,7 +116,7 @@
 				{% endfor %}
 			</section>
 			{% endif %}
-			<h5>Social <em>&</em> contact links</h5>
+			<h5>Social <em>&amp;</em> contact links</h5>
 			<ul role="social-links">
 				<li>
 					<a role="twitter" href="http://twitter.com/phollow" target="_blank" title="@phollow"></a>
