--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
 			
 
 			{% if dribbble_shots %}
-			<h5>Latest Dribbble shots</h5>
+			<h5>Latest Dribbble shot</h5>
 			<section role="dribbble-wrapper" class="clearfix">
 				{% for dribbble_shot in dribbble_shots %}
 					<a target="_blank" href="{{ dribbble_shot.url }}" title="{{ dribbble_shot.title }}">
