--- a/static/css/style.css
+++ b/static/css/style.css
@@ -411,7 +411,7 @@ section[role="logo"] img {
 .progress-bar {
 	background-color: #F1F1F1;
 	height: 1em;
-	padding: 3px;
+	padding: 1px;
 	margin: 0px 0 .5em 0;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -451,6 +451,7 @@ section[role="logo"] img {
 	background-image: -ms-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
 	background-image: -o-linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
 	background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+	border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 
